--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,8 +1,7 @@
-[server]
+﻿[server]
 headless = true
 port = 10000
 
 [browser]
 serverAddress = "0.0.0.0"
-serverPort = 10000S
-
+serverPort = 10000
